# Nexterm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/gtk/: Cargo.toml
apps/gtk/src/: main.rs
apps/qt/: Cargo.toml  README.md
apps/qt/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  event.rs  lib.rs  registry.rs
crates/core/src/model/: group.rs  mod.rs  profile.rs  session.rs
crates/core/src/store/: file.rs  mod.rs
crates/credentials/: Cargo.toml
crates/credentials/src/: backend.rs  error.rs  keyring_os.rs  lib.rs  memory.rs  secret.rs
crates/miniservers/: Cargo.toml
crates/miniservers/src/: error.rs  http.rs  lib.rs  scheduler.rs  service.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/protocols/: Cargo.toml
crates/protocols/src/: error.rs  lib.rs  local.rs  traits.rs
crates/protocols/src/ssh/: mock.rs  mod.rs  russh_impl.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: altscreen.rs  error.rs  highlight.rs  lib.rs  pty.rs
crates/tunnels/: Cargo.toml
crates/tunnels/src/: error.rs  lib.rs  manager.rs  russh_driver.rs  socks5.rs
crates/ui-common/: Cargo.toml
crates/ui-common/src/: app.rs  conflict.rs  lib.rs  macros.rs  multiexec.rs  safety.rs
xtask/: Cargo.toml
xtask/src/: main.rs
