[package]
name = "rrs-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rrs-platform = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
