[package]
name = "rrs-credentials"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Enable the OS secret store backend (Secret Service / KWallet / GNOME Keyring
# on Linux). NOTE: keyring 3.x selects its platform store AND its crypto
# transport via Cargo features. On Linux we use `sync-secret-service` (blocking,
# zbus-based; talks to KWallet & GNOME Keyring alike) together with `crypto-rust`
# (pure-Rust crypto, no OpenSSL/C deps). For Windows/macOS swap in
# `windows-native` / `apple-native` instead. Verify the exact feature names and
# API against the pinned keyring version before relying on this in production.
keyring-os = ["dep:keyring"]

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }
tracing = { workspace = true }
keyring = { version = "3", optional = true, features = ["sync-secret-service", "crypto-rust"] }
