[package]
name = "rrs-protocols"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Real SSH/SFTP transport via `russh` + `russh-sftp`. OFF by default: pulls in
# network + crypto deps. The `ring` crypto backend is used (pure-ish, no nasm);
# `flate2`/`rsa` keep parity with russh defaults.
ssh-russh = ["dep:russh", "dep:russh-sftp"]
# Local-shell transport: adapts the terminal crate's PTY backend (feature `pty`)
# to the async `RemoteSession` trait so a local shell is just another transport.
# OFF by default (pulls in `portable-pty`); enable to use `LocalShellConnector`.
local-pty = ["dep:rrs-terminal", "rrs-terminal/pty"]

[dependencies]
rrs-core = { workspace = true }
rrs-credentials = { workspace = true }
rrs-terminal = { workspace = true, optional = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# --- real SSH/SFTP backend (feature `ssh-russh`) ---
russh = { version = "0.61.2", default-features = false, features = ["ring", "flate2", "rsa"], optional = true }
russh-sftp = { version = "2.3.0", optional = true }
